tests/ui/proc-macro/mixed-site-span.stderr
error[E0426]: use of undeclared label `'label_use`
  --> $DIR/mixed-site-span.rs:13:9
   |
LL |         proc_macro_rules!();
   |         ^^^^^^^^^^^^^^^^^^^ undeclared label `'label_use`
   |
   = note: this error originates in the macro `proc_macro_rules` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find value `local_use` in this scope
  --> $DIR/mixed-site-span.rs:13:9
   |
LL |         proc_macro_rules!();
   |         ^^^^^^^^^^^^^^^^^^^ help: a local variable with a similar name exists: `local_def`
   |
   = note: this error originates in the macro `proc_macro_rules` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find value `local_def` in this scope
  --> $DIR/mixed-site-span.rs:17:9
   |
LL |         local_def;
   |         ^^^^^^^^^ help: a local variable with a similar name exists: `local_use`

error[E0412]: cannot find type `ItemUse` in crate `$crate`
  --> $DIR/mixed-site-span.rs:24:1
   |
LL | pass_dollar_crate!();
   | ^^^^^^^^^^^^^^^^^^^^ not found in `$crate`
   |
   = note: this error originates in the macro `proc_macro_rules` which comes from the expansion of the macro `pass_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0412, E0425, E0426.
For more information about an error, try `rustc --explain E0412`.
